OLMIS-1609: Standardized messages in the openlmis-ui-components repository

--- a/src/openlmis-form/openlmis-datepicker-popover.html
+++ b/src/openlmis-form/openlmis-datepicker-popover.html
@@ -4,6 +4,6 @@
     </bs-datepicker>
 
     <button class="btn btn-primary primary-action" ng-if="value" ng-click="clearSelection()">
-        {{'select.clear' | message}}
+        {{'openlmisForm.clearSelection' | message}}
     </button>
 </div>
