--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -2,6 +2,6 @@
     <i class="olmis-datepicker-icon"></i>
     <input class="openlmis-datepicker" type="text" autocomplete="off" class="form-control"
            ng-model="dateString" id="{{inputId}}" ng-change="changeMethod()"
-           popover popover-title="{{'select.date' | message}}"
+           popover popover-title="{{'openlmisForm.selectDate' | message}}"
            popover-template="openlmis-form/openlmis-datepicker-popover.html"/>
 </div>
