--- a/src/openlmis-form/select-search-option.html
+++ b/src/openlmis-form/select-search-option.html
@@ -1,12 +1,12 @@
 <form class="select-search-option">
     <div>
-    <label for="search">{{'label.search' | message}}</label>
+    <label for="search">{{'openlmisForm.search' | message}}</label>
     <input id="search" type="text" ng-model="searchText" ng-change="findSelectedOption(options, selected)"/>
     </div>
     <div class="select-content">
     <fieldset class="form-group">
-        <legend>{{'msg.selectAnOption' | message}}</legend>
-        <p>{{'msg.showingNumOfResults' | message: {'num': results.length, 'total': options.length} }}</p>
+        <legend>{{'openlmisForm.selectAnOption' | message}}</legend>
+        <p>{{'openlmisForm.showingNumberOfResults' | message: {'num': results.length, 'total': options.length} }}</p>
         <label class="radio" ng-repeat="option in options | filter: {label: searchText} as results">
             <input type="radio" ng-click="select(option)" name="selected" ng-model="selected" ng-value="option" />
             {{option.label}}
@@ -14,6 +14,6 @@
     </fieldset>
     </div>
      <div>
-        <input ng-if="showClearSelection()" ng-click="clearSelection()" type="submit" value="{{'select.clear' | message}}"/>
+        <input ng-if="showClearSelection()" ng-click="clearSelection()" type="submit" value="{{'openlmisForm.clearSelection' | message}}"/>
     </div>
 </form>
