--- a/src/openlmis-modal/alert.html
+++ b/src/openlmis-modal/alert.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button ng-click="$hide()">{{'button.close' | message}}</button>
+                <button ng-click="$hide()">{{'openlmisModal.close' | message}}</button>
             </div>
         </div>
     </div>
