--- a/src/openlmis-popover/popover-button.html
+++ b/src/openlmis-popover/popover-button.html
@@ -1,1 +1,1 @@
-<a class="show-popover">{{ 'popover.showButton' | message}}</a>
+<a class="show-popover">{{'openlmisPopover.moreInformation' | message}}</a>
