--- a/src/openlmis-form/characters-left.html
+++ b/src/openlmis-form/characters-left.html
@@ -1,4 +1,4 @@
 <div class="characters-left">
-    <div ng-if="text.length <= maxLength">{{'msg.charactersLeft' | message}}: {{maxLength - text.length}}</div>
-    <div ng-if="text.length > maxLength" class="no-left">{{'error.tooManyCharacters' | message}}: {{text.length - maxLength}}</div>
+    <div ng-if="text.length <= maxLength">{{'openlmisForm.charactersLeft' | message}}: {{maxLength - text.length}}</div>
+    <div ng-if="text.length > maxLength" class="no-left">{{'openlmisForm.tooManyCharacters' | message}}: {{text.length - maxLength}}</div>
 </div>
