--- a/src/openlmis-form/select-search-option.html
+++ b/src/openlmis-form/select-search-option.html
@@ -1,19 +1,16 @@
-<form class="select-search-option">
+<form ng-show="options.length > PAGE_SIZE" class="select-search">
     <div>
-    <label for="search">{{'openlmisForm.search' | message}}</label>
-    <input id="search" type="text" ng-model="searchText" ng-change="findSelectedOption(options, selected)"/>
+        <label for="search">{{'openlmisForm.search' | message}}</label>
+        <input id="search" type="text" ng-model="searchText" />
     </div>
-    <div class="select-content">
-    <fieldset class="form-group">
-        <legend>{{'openlmisForm.selectAnOption' | message}}</legend>
-        <p>{{'openlmisForm.showingNumberOfResults' | message: {'num': results.length, 'total': options.length} }}</p>
-        <label class="radio" ng-repeat="option in options | filter: {label: searchText} as results">
-            <input type="radio" ng-click="select(option)" name="selected" ng-model="selected" ng-value="option" />
-            {{option.label}}
-        </label>
-    </fieldset>
-    </div>
-     <div>
-        <input ng-if="showClearSelection()" ng-click="clearSelection()" type="submit" value="{{'openlmisForm.clearSelection' | message}}"/>
-    </div>
+    <p>{{'openlmisForm.showingNumberOfResults' | message: {'num': results.length, 'total': options.length} }}</p>
+</form>
+<form class="select-options" style="max-height: {{PAGE_SIZE*2}}em;">
+	<fieldset class="form-group">
+		<legend>{{'openlmisForm.selectAnOption' | message }}</legend>
+		<label class="radio" ng-repeat="option in options | filter: {label: searchText} as results">
+			<input type="radio" ng-click="select(option.value)" ng-checked="option.selected" ng-value="option.value" />
+			{{option.label}}
+		</label>
+	</fieldset>
 </form>
