--- a/src/openlmis-form/select-search-option.html
+++ b/src/openlmis-form/select-search-option.html
@@ -8,6 +8,7 @@
 <form class="select-options" style="max-height: {{PAGE_SIZE*2}}em;">
 	<fieldset class="form-group">
 		<legend>{{'openlmisForm.selectAnOption' | message }}</legend>
+		<a ng-if="selectedValue" ng-click="select()">{{ 'openlmisForm.clearSelection' | message}}</a>
 		<label class="radio" ng-repeat="option in options | filter: {label: searchText} as results">
 			<input type="radio" ng-click="select(option.value)" ng-checked="option.selected" ng-value="option.value" />
 			{{option.label}}
