OLMIS-2561 avoid tab stop on the error symbol

--- a/src/openlmis-popover/popover-button.html
+++ b/src/openlmis-popover/popover-button.html
@@ -1,1 +1,1 @@
-<a class="show-popover">{{'openlmisPopover.moreInformation' | message}}</a>
+<a class="show-popover" tabindex="-1">{{'openlmisPopover.moreInformation' | message}}</a>
