OLMIS-2602: Removed bootbox dependency from the alert modal

--- a/src/openlmis-modal/alert.html
+++ b/src/openlmis-modal/alert.html
@@ -6,10 +6,10 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 <div class="alert-main">
-                    <span class="icon {{alertClass}}"></span>
-                    <div class="alert-message {{alertClass}}">
-                        <h2>{{title | message}}</h2>
-                        <p>{{message | message}}</p>
+                    <span class="icon {{vm.alertClass}}"></span>
+                    <div class="alert-message {{vm.alertClass}}">
+                        <h2>{{vm.title | message}}</h2>
+                        <p>{{vm.message | message}}</p>
                     </div>
                 </div>
             </div>
