--- a/src/openlmis-modal/confirm-modal.html
+++ b/src/openlmis-modal/confirm-modal.html
@@ -1,4 +1,4 @@
-<div class="modal alert-modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
