--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -2,14 +2,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4>{{vm.title | message}}</h4>
+                <h4>{{vm.title.key | message:(vm.title.params)}}</h4>
             </div>
             <div class="modal-body">
                 <div class="adjustments-modal">
                     <form ng-if="!isDisabled" ng-submit="vm.addAdjustment()" reload-form>
                         <fieldset>
                             <legend >
-                                {{vm.message | message}}
+                                <h4>{{vm.message.key | message:(vm.message.params)}}</h4>
                             </legend>
                             <div class="form-inline">
                                 <div class="form-group">
@@ -17,8 +17,8 @@
                                         {{'openlmisAdjustments.reason' | message}}
                                     </label>
                                     <select id="reason"
-                                        ng-model="vm.adjustment.reason"
-                                        ng-options="reason as vm.getReasonName(reason) for reason in vm.reasons"
+                                        ng-model="vm.reason"
+                                        ng-options="reason as reason.name for reason in vm.reasons"
                                         required>
                                     </select>
                                 </div>
@@ -28,7 +28,7 @@
                                     </label>
                                     <input id="quantity"
                                            class="form-control"
-                                           ng-model="vm.adjustment.quantity"
+                                           ng-model="vm.quantity"
                                            required positive-integer/>
                                 </div>
                                 <button class="add" type="submit">
@@ -45,7 +45,7 @@
 
                     <dl ng-if="vm.adjustments.length">
                         <dt ng-repeat-start="adjustment in vm.adjustments">
-                            {{vm.getReasonName(adjustment.reasonId)}}
+                            {{adjustment.reason.name}}
                         </dt>
                         <dd ng-repeat-end>
                             <div ng-if="isDisabled">{{adjustment.quantity}}</div>
@@ -60,10 +60,10 @@
                                 ng-if="!isDisabled"
                                 value="{{'openlmisAdjustments.remove' | message}}">
                         </dd>
-                        <dt ng-repeat-start="(key, value) in vm.totals">
+                        <dt ng-repeat-start="(key, value) in vm.summaries">
                             {{key | message}}
                         </dt>
-                        <dd ng-repeat-end>{{vm.totals[key]()}}</dd>
+                        <dd ng-repeat-end>{{vm.summaries[key]()}}</dd>
                     </dl>
                 </div>
             </div>
