--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -8,7 +8,7 @@
                 <legend>
                     <h4>{{vm.message | message}}</h4>
                 </legend>
-                <form class="form-inline" ng-if="!isDisabled" ng-submit="vm.addAdjustment()" reload-form>
+                <form class="form-inline" ng-if="!vm.isDisabled" ng-submit="vm.addAdjustment()" reload-form>
                     <div class="form-group">
                         <label for="reason">
                             {{'openlmisAdjustments.reason' | message}}
@@ -43,25 +43,25 @@
                                 <tr>
                                     <th>{{'openlmisAdjustments.reason' | message}}</th>
                                     <th>{{'openlmisAdjustments.quantity'| message}}</th>
-                                    <th>{{'openlmisAdjustments.actions' | message}}</th>
+                                    <th ng-if="!vm.isDisabled">{{'openlmisAdjustments.actions' | message}}</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="adjustment in vm.adjustments">
                                     <td>{{adjustment.reason.name}}</td>
                                     <td>
-                                        <div ng-if="isDisabled">{{adjustment.quantity}}</div>
+                                        <div ng-if="vm.isDisabled">{{adjustment.quantity}}</div>
                                         <input id="adjustment-quantity-{{$index}}"
                                             class="form-control"
                                             ng-model="adjustment.quantity"
                                             ng-change="vm.recalculateTotal()"
-                                            ng-if="!isDisabled"
+                                            ng-if="!vm.isDisabled"
                                             required positive-integer/>
                                     </td>
-                                    <td>
+                                    <td ng-if="!vm.isDisabled">
                                         <input type="button" class="danger"
                                             ng-click="vm.removeAdjustment(adjustment)"
-                                            ng-if="!isDisabled"
+                                            ng-if="!vm.isDisabled"
                                             value="{{'openlmisAdjustments.remove' | message}}">
                                     </td>
                                 </tr>
@@ -76,12 +76,17 @@
                     <dd ng-repeat-end>{{vm.summaries[key](vm.adjustments)}}</dd>
                 </dl>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" ng-if="!vm.isDisabled">
                 <button class="btn btn-default" ng-click="vm.cancel()">
                     {{'openlmisAdjustments.cancel' | message}}
                 </button>
                 <button class="btn btn-primary" form="adjustmentsForm" type="submit">
                     {{'openlmisAdjustments.save' | message}}
+                </button>
+            </div>
+            <div class="modal-footer" ng-if="vm.isDisabled">
+                <button class="btn btn-default" ng-click="$hide()">
+                    {{'openlmisAdjustments.close' | message}}
                 </button>
             </div>
         </div>
