OLMIS-2799: Changed styling to match styleguide

--- a/src/openlmis-form/characters-left.html
+++ b/src/openlmis-form/characters-left.html
@@ -1,4 +1,2 @@
-<div class="characters-left">
-    <div ng-if="text.length <= maxLength">{{'openlmisForm.charactersLeft' | message}}: {{maxLength - text.length}}</div>
-    <div ng-if="text.length > maxLength" class="no-left">{{'openlmisForm.tooManyCharacters' | message}}: {{text.length - maxLength}}</div>
-</div>
+<div ng-if="text.length <= maxLength">{{'openlmisForm.charactersLeft' | message}}: {{maxLength - text.length}}</div>
+<div ng-if="text.length > maxLength" class="input-error">{{'openlmisForm.tooManyCharacters' | message}}: {{text.length - maxLength}}</div>
