OLMIS-249: Fixed datepicker styling and localization

--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -1,9 +1,7 @@
-<div class="olmis-datepicker input-group date">
-    <input id="{{inputId}}" type="text" class="form-control" autocomplete="off"
+<div class="olmis-datepicker">
+    <i class="olmis-datepicker-icon"></i>
+    <input id="{{inputId}}" type="text" class="openlmis-datepicker form-control" autocomplete="off"
            data-provide="datepicker" data-date-language="{{language}}" data-start-date="{{minDate}}" data-end-date="{{maxDate}}"
            data-date-clear-btn="true" data-date-today-highlight="true" data-date-autoclose="true"
            ng-model="dateString" ng-change="changeMethod()"/>
-    <div class="input-group-addon">
-        <i class="olmis-datepicker-icon"></i>
-    </div>
 </div>
