--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -1,6 +1,9 @@
 <div class="olmis-datepicker">
     <i class="olmis-datepicker-icon"></i>
     <input id="{{inputId}}" type="text" class="openlmis-datepicker form-control" autocomplete="off"
-           data-provide="datepicker" data-date-language="{{language}}" data-start-date="{{minDate}}" data-end-date="{{maxDate}}"
-           data-date-clear-btn="true" data-date-today-highlight="true" data-date-autoclose="true" ng-model="dateString"/>
+           data-provide="datepicker" data-date-language="{{language}}"
+           data-start-date="{{minDate}}" data-end-date="{{maxDate}}"
+           data-date-clear-btn="true" data-date-today-highlight="true"
+           data-date-autoclose="true" data-date-format="{{dateFormat}}"
+           ng-model="dateString"/>
 </div>
