--- a/src/openlmis-file-upload/file-upload.html
+++ b/src/openlmis-file-upload/file-upload.html
@@ -1,3 +1,3 @@
-<button class="file" ng-click="select()">{{'openlmisFileUpload.selectFile' | message}}</button>
-<button class="clear" ng-if="getFileName()" ng-click="clear()">{{'openlmisFileUpload.clear' | message}}</button>
-<p class="filename">{{getFileName()}}</p>
+<button class="file" type="button" ng-click="select()">{{'openlmisFileUpload.selectFile' | message}}</button>
+<button class="clear" type="button" ng-if="getFileName()" ng-click="clear()">{{'openlmisFileUpload.clear' | message}}</button>
+<p>{{getFileName()}}</p>
