MW-474: Fixed stock adjusment reasons display order not being respected in the UI

--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -13,7 +13,7 @@
                         </label>
                         <select id="reason"
                             ng-model="vm.reason"
-                            ng-options="reason as reason.name for reason in vm.reasons"
+                            ng-options="reason as reason.name for reason in vm.reasons | orderBy:'displayOrder'"
                             required>
                         </select>
                     </div>
