OLMIS-2833: add required option to datepicker

--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -5,5 +5,5 @@
            data-start-date="{{minDate}}" data-end-date="{{maxDate}}"
            data-date-clear-btn="true" data-date-today-highlight="true"
            data-date-autoclose="true" data-date-format="{{dateFormat}}"
-           ng-model="dateString"/>
+           ng-model="dateString" ng-required="{{required}}"/>
 </div>
