OLMIS-2833: pass message to method

--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -6,5 +6,5 @@
            data-date-clear-btn="true" data-date-today-highlight="true"
            data-date-autoclose="true" data-date-format="{{dateFormat}}"
            ng-model="dateString" ng-required="{{required}}"
-           openlmis-invalid="{{invalidMessage}}" ng-change="change()"/>
+           openlmis-invalid="{{invalidMessage}}" ng-change="change(invalidMessage)"/>
 </div>
