OLMIS-3032: fixed datepicker bug with clearing predefined date

--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -4,7 +4,7 @@
            data-provide="datepicker" data-date-language="{{language}}"
            data-start-date="{{minDate}}" data-end-date="{{maxDate}}"
            data-date-clear-btn="true" data-date-today-highlight="true"
-           data-date-autoclose="true" data-date-format="{{dateFormat}}"
+           data-date-autoclose="true"
            ng-model="dateString" ng-required="{{required}}"
            openlmis-invalid="{{invalidMessage}}"/>
 </div>
