OLMIS-3169: Fixed setting focus on quantity after selecting reason in looses and adjustments modal
Added custom directive 'autofocus' to make it work on all browsers

--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -14,7 +14,8 @@
                         <select id="reason"
                             ng-model="vm.reason"
                             ng-options="reason as reason.name for reason in vm.reasons | orderBy:'displayOrder'"
-                            required>
+                                ng-change="vm.onChange(vm.reason)"
+                            required autofocus>
                         </select>
                     </div>
                     <div class="form-group">
