--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -14,8 +14,7 @@
                         <select id="reason"
                             ng-model="vm.reason"
                             ng-options="reason as reason.name for reason in vm.reasons | orderBy:'displayOrder'"
-                                ng-change="vm.onChange(vm.reason)"
-                            required autofocus>
+                            required>
                         </select>
                     </div>
                     <div class="form-group">
