OLMIS-3917: added optional title to confirm modal

--- a/src/openlmis-modal/confirm-modal.html
+++ b/src/openlmis-modal/confirm-modal.html
@@ -1,6 +1,11 @@
 <div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
+            <div class="modal-header" ng-show="vm.titleMessage">
+                <h1 class="modal-title">
+                    {{vm.titleMessage | message}}
+                </h1>
+            </div>
             <div class="modal-body">
                 <p ng-bind-html="vm.message"></p>
             </div>
