--- a/src/openlmis-app-cache/openlmis-app-cache.html
+++ b/src/openlmis-app-cache/openlmis-app-cache.html
@@ -1,3 +1,3 @@
-<div class="openlmis-app-cache" class="{{vm.updateReady ? 'outdated' : ''}}" ng-click="vm.updateCache()">
+<div class="openlmis-app-cache" ng-class="{outdated: vm.updateReady}" ng-click="vm.updateCache()">
     {{'openlmisAppCache.softwareLastUpdatedOn' | message}} {{vm.buildDate | openlmisDate}}
 </div>
