--- a/src/openlmis-tags-input/openlmis-tags-input.html
+++ b/src/openlmis-tags-input/openlmis-tags-input.html
@@ -4,6 +4,6 @@
         use-strings="true"
         replace-spaces-with-dashes="false"
         add-from-autocomplete-only="{{allowNewTags === 'false'}}">
-            <auto-complete source="tagsInputVm.filterAvailableTags($query)"></auto-complete>
+            <auto-complete source="tagsInputVm.filterAvailableTags($query)" min-length="2"></auto-complete>
     </tags-input>
 </div>
