OLMIS-4415: Fixed weird datepicker behavior when entering text

--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -3,7 +3,7 @@
     <input id="{{inputId}}" type="text" class="openlmis-datepicker form-control" autocomplete="off"
            data-provide="datepicker" data-date-language="{{language}}"
            data-date-clear-btn="true" data-date-today-highlight="true"
-           data-date-autoclose="true"
+           data-date-autoclose="true" data-date-force-parse="false"
            ng-model="dateString" ng-required="{{required}}"
            openlmis-invalid="{{invalidMessage}}"/>
 </div>
