Fixed some code smells

--- a/src/openlmis-adjustments/adjustments-modal.html
+++ b/src/openlmis-adjustments/adjustments-modal.html
@@ -34,7 +34,7 @@
                         <div class="openlmis-table-container">
                         <table>
                             <caption class="adjustment-warning alert is-info"
-                                 ng-show="vm.adjustments == null || vm.adjustments.length === 0">
+                                 ng-show="vm.adjustments === null || vm.adjustments.length === 0">
                                     {{'openlmisAdjustments.noAdjustments' | message}}
                             </caption>
                             <thead>
